<resources>
    <string name="app_name">PlannerApp</string>
    <string name="tabOverview">Overview</string>
    <string name="tabCalendar">Calendar</string>
    <string name="title">Title</string>
    <string name="note">Note</string>
    <string name="start_date">Start date</string>
    <string name="select_date">Select Date</string>
    <string name="start_time">Start time</string>
    <string name="select_time">Select Time</string>
    <string name="end_date">End date</string>
    <string name="end_time">End time</string>
    <string name="overview_title">Events and Todos</string>
    <string name="create_event">Create Event</string>
    <string name="events_for_selected_date">Events for Selected Date</string>
    <string name="event_start">Event start:</string>
    <string name="event_end">Event end:</string>
    <string name="title_here">Title here</string>
    <string name="startdate_here">StartDate here</string>
    <string name="enddate_here">EndDate here</string>
    <string name="description_here">Description here</string>
    <string name="plus_symbol">Plus-symbol</string>
    <string name="title_goes_here">Title goes here</string>
    <string name="here_goes_the_time">Here goes the time</string>

    // Calendar

    <string name="material_calendar_monday">Mon</string>
    <string name="material_calendar_tuesday">Tue</string>
    <string name="material_calendar_wednesday">Wed</string>
    <string name="material_calendar_thursday">Thu</string>
    <string name="material_calendar_friday">Fri</string>
    <string name="material_calendar_saturday">Sat</string>
    <string name="material_calendar_sunday">Sun</string>

    <array name="material_calendar_months_array">
        <item>January</item>
        <item>February</item>
        <item>March</item>
        <item>April</item>
        <item>May</item>
        <item>June</item>
        <item>July</item>
        <item>August</item>
        <item>September</item>
        <item>October</item>
        <item>November</item>
        <item>December</item>
    </array>

    <string name="material_calendar_today_button">Today</string>
    <string name="material_calendar_positive_button">OK</string>
    <string name="material_calendar_negative_button">Cancel</string>
    <string name="menu_button">menu button</string>
    <string name="calendar">Calendar</string>
    <string name="overview">Overview</string>
    <string name="signout">Signout</string>
    <string name="username_placeholder">Brukernavn her!</string>
    <string name="current_user_header">Currently logged in as:</string>
    <string name="user_email_placeholder">User email here!</string>
    <string name="delete_btn_description">delete button</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>